# eureka_2_0_api

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_topic_fields_to_articles.py  003_add_entity_tables.py  004_add_research_to_articles.py  005_remove_unique_url_constraint.py
app/: main.py  models.py
app/db/: base.py  models.py  repositories.py
app/routers/: articles.py  entity_types.py  hypotheses.py  researches.py  validation.py
app/services/: article_parser.py  article_service.py  entity_type_service.py  hypothesis_service.py  llm_service.py  research_service.py  validation_service.py
